--- a/app_flask/template/index.html
+++ b/app_flask/template/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
-    <title>Figuras Geométricas con Flask test</title>
+    <title>Figuras Geométricas con Flask</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
 </head>
 <body>
