--- a/app_flask/template/index.html
+++ b/app_flask/template/index.html
@@ -24,6 +24,10 @@
         <button type="submit">Generar</button>
     </form>
 
+    {% if error %}
+        <p style="color: red;">Error: {{ error }}</p>
+    {% endif %}
+
     {% if shape %}
         <h2>Figura Generada:</h2>
         <div class="{{ shape }}" style="--size: {{ size }}px; --color: {{ color }};"></div>
